<?xml version="1.0"?>
<package format="3">
  <name>snapstack_msgs2</name>
  <version>5.4.1</version>
  <description>Message definitions for ACL snap stack</description>

  <maintainer email="btlopez@mit.edu">Brett Lopez</maintainer>
  <maintainer email="plusk@mit.edu">Parker Lusk</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>actionlib_msgs</depend>

  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <!-- <member_of_group>rosidl_interface_packages</member_of_group> -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
